--- a/index.html
+++ b/index.html
@@ -16,70 +16,72 @@
         <p>Welcome to my Music Player <br><a href="https://mayankjaiswal1709.github.io/Portfolio/">Mayank_Jaiswal</a></p>
 
     </div>
+    <div class="d-flex">
 
-    <div class="music-player">
+
+        <div class="music-player">
 
 
-        <button id="playlist">
+            <button id="playlist">
         <i class="fa-solid fa-angle-down"></i>
       </button>
 
-        <img id="song-image" src="/images/ennasoana.jpg" />
+            <img id="song-image" src="/images/ennasoana.jpg" />
 
-        <div class="song-details">
-            <p id="song-name">Enna Sona</p>
-            <p id="song-artist">Arijit Singh</p>
-        </div>
+            <div class="song-details">
+                <p id="song-name">Enna Sona</p>
+                <p id="song-artist">Arijit Singh</p>
+            </div>
 
-        <div class="player-options">
-            <button id="shuffle">
+            <div class="player-options">
+                <button id="shuffle">
           <i class="fa-solid fa-shuffle"></i>
         </button>
 
-            <button id="prev">
+                <button id="prev">
           <i class="fa-solid fa-backward-step"></i>
         </button>
 
-            <button id="play">
+                <button id="play">
           <i class="fa-solid fa-play"></i>
         </button>
 
-            <button id="pause" class="hide">
+                <button id="pause" class="hide">
           <i class="fa-solid fa-pause"></i>
         </button>
 
-            <button id="next">
+                <button id="next">
           <i class="fa-solid fa-forward-step"></i>
         </button>
 
-            <button id="repeat">
+                <button id="repeat">
           <i class="fa-solid fa-repeat"></i>
         </button>
 
-        </div>
+            </div>
 
-        <audio id="audio" preload="metadata"></audio>
+            <audio id="audio" preload="metadata"></audio>
 
-        <div id="progress-bar">
-            <div id="current-progress"></div>
-        </div>
+            <div id="progress-bar">
+                <div id="current-progress"></div>
+            </div>
 
-        <div class="time-container">
-            <span id="current-time">0:00</span>
-            <span id="max-duration">0:00</span>
-        </div>
+            <div class="time-container">
+                <span id="current-time">0:00</span>
+                <span id="max-duration">0:00</span>
+            </div>
 
-        <div id="playlist-container" class="hide">
+            <div id="playlist-container" class="hide">
 
-            <button id="close-button">
+                <button id="close-button">
           <i class="fa-solid fa-xmark"></i>
         </button>
 
-            <ul id="playlist-songs"></ul>
+                <ul id="playlist-songs"></ul>
 
+            </div>
         </div>
     </div>
-
     <div class="ocean">
         <div class="wave"></div>
         <div class="wave"></div>
